用户个人修改  头像上传

--- a/src/main/resources/static/manage/index.html
+++ b/src/main/resources/static/manage/index.html
@@ -157,7 +157,7 @@
 				<!-- 登录状态 begin -->
 				<div class="siteHCountBox" id="isLogin">
 					<div class="index-avatar fl">
-						<img src="" alt="头像"><i></i>
+						<img name="uimage" alt="头像"><i></i>
 					</div>
 					<div class="siteHCountInner">
 						<!-- <a href="/zc/#/user-center/reward-order" class="grzx btn_ALink" target="_self">个人中心</a> -->
